Version 0.4-0
=============
- For clarity the GUI supports now also the replacement of epsilon with a given (intentionally small) number between 0 and 1. See options.
- graphGUI Parameter grid is now numeric(0) by default. This restores the last used grid value.
- Fractions instead of decimal numbers are shown in more places.

Version 0.3-6 (15-Mar-2011)
=============
- Mainly a bug-fix release, since the GUI was often not responding in 0.3-5.
- C compiler is needed for building gMCP since the first C source file was added.
- When saving/loading graphs, reports or png/LaTeX files, the last directory is remembered. 
- Adjusted p-values are now truncated and can not be bigger than one.

Version 0.3-5 (13-Mar-2011)
=============
- Unfortunately after release it was noted that the GUI was not responding in 0.3-5.
- New dependencies: MASS for MASS::fractions and PolynomF for polynoms in epsilon.
- Method graphGUI has a new optional argument "pvalues" for loading p-values.
- Trying to show fractions in the GUI instead of decimal numbers
- Line width of graphs can be adjusted (line width 2 is now default)
- Use of antialiasing for nicer graphics 
- Improvement of PNG exports
- Parameters for example graphs in GUI
- More RUnit tests

Version 0.3-4 (26-Nov-2010)
=============
- New functions: graph2matrix and matrix2graph
- Adjaceny matrix is shown and can be edited.

Version 0.3-3 (15-Nov-2010)
=============
- Be careful with epsilon edges (we never specified what exactly they are and how they should behave) 
  and please wait for version 0.4 which will handle them in a completely new way and will document it.
  Support for them is broken in this release. 
- New example graph from Hommel et al. 2007.
- Inserted missing $ in LaTeX code output from graph2latex.
- Better automatic placement of edge labels.
- Options dialog in GUI.
- All doc files are accessible from the GUI menu.