@@ -1,10 +1,13 @@
 High priority:
 ==============
 
+- Description: gACT provides functions to construct, perform and evaluate graph based multiple testing procedures (MCPs) with partial knowledge of the correlation structure between hypotheses.
+- Author information for Florian? <float@lefant.net> etc?
+- 1 Page PDF how to use gMCP, including hint for R installation
 - press e for epsilon, or 1+e+e^2
 - people want to allow alpha = 1 and interpret it as weight, which causes problems
 - display fractions as fractions and allow input as for example 1/7
-  # eval(parse(text="1/7"))
+ # eval(parse(text="1/7"))
 - Implement support for something like 2*\epsilon or \epsilon^2
  (without using a small value for epsilon like 10^{-6} 
   - that does work already if we ignore rounding problems).
